Fix editorial issues

--- a/spec13/03Terms.tex
+++ b/spec13/03Terms.tex
@@ -7,53 +7,56 @@
 {\bf \thedefctr~аутентификация}:
 Проверка подлинности стороны.
 
-{\bf \thedefctr~билет (ticket)}:
+{\bf \thedefctr~билет} (ticket):
 Ссылка на секрет, согласованный в соединении TLS.
 
-{\bf \thedefctr~возобновление связи (resumption)}: 
+{\bf \thedefctr~возобновление связи} (resumption): 
 Ускоренный вариант Handshake, в котором стороны используют секрет, 
 согласованный в предыдущем соединении.
 
-{\bf \thedefctr~запись (record)}:
+{\bf \thedefctr~запись} (record):
 Единица данных в протоколе Record.
 
-{\bf \thedefctr~клиент (client)}:
+{\bf \thedefctr~клиент} (client):
 Сторона, которая инициирует выполнение протокола TLS.
 
 % RFC8446: The endpoint initiating the TLS connection.
 
-{\bf \thedefctr~криптонабор (cipher suite)}:
+{\bf \thedefctr~криптонабор} (cipher suite):
 Алгоритмы аутентифицированного шифрования в связке с алгоритмом хэширования,
 которые используются для защиты пересылаемых данных, построения ключей, 
 аутентификации.
 
-{\bf \thedefctr~одноразовый ключ (ephemeral key)}:
+{\bf \thedefctr~одноразовый ключ} (ephemeral key):
 Ключ, который создается, используется и уничтожается в течение одного сеанса 
 протокола.
 
 % СТБ 34.101.66
 
-{\bf \thedefctr~оповещение (alert)}:
+{\bf \thedefctr~оповещение} (alert):
 Сообщение протокола Alert.
 
-{\bf \thedefctr~параметры защиты (security parameters)}:
-Параметры, которые определяют правила защиты соединения, в том числе: 
-версия TLS, криптонабор, параметры протокола Диффи~--- Хеллмана, перечни 
-алгоритмов электронной цифровой подписи и предварительно согласованных 
-секретов, режим формирования общих ключей.
+{\bf \thedefctr~параметры защиты} (security parameters):
+Параметры, которые определяют правила защиты соединения.
 
-{\bf \thedefctr~предварительно согласованный секрет; PSK (pre-shared secret)}:
+\begin{note*}
+Параметрами защиты являются версия TLS, криптонабор, параметры протокола 
+Диффи~--- Хеллмана, перечни алгоритмов электронной цифровой подписи и 
+предварительно согласованных секретов, режим формирования общих ключей.
+\end{note*}
+
+{\bf \thedefctr~предварительно согласованный секрет}; PSK (pre-shared secret):
 Секрет, согласованный сторонами до установки соединения: за пределами TLS или в 
 предыдущем соединении.
 
-{\bf \thedefctr~прикладной протокол (application protocol)}:
+{\bf \thedefctr~прикладной протокол} (application protocol):
 Протокол, который выполняется поверх протокола TLS.
 
-{\bf \thedefctr~прикладные данные (application data)}:
+{\bf \thedefctr~прикладные данные} (application data):
 Данные прикладных протоколов, которые пересылаются с помощью TLS.
 
-{\bf \thedefctr~протокол защиты транспортного уровня; протокол TLS 
-(transport layer security protocol)}: 
+{\bf \thedefctr~протокол защиты транспортного уровня}; протокол TLS 
+(transport layer security protocol): 
 Определяемый в настоящем стандарте криптографический протокол, который
 обеспечивает аутентификацию сторон, конфиденциальность и контроль целостности и
 подлинности данных, передаваемых между сторонами на транспортном
@@ -99,21 +102,21 @@
 Протокол передачи данных, в том числе в защищенном виде; 
 часть протокола TLS.
 
-{\bf \thedefctr~расширение (extension)}:
+{\bf \thedefctr~расширение} (extension):
 Структура данных, которая входит в сообщение Handshake и служит для 
 согласования параметров, обмена ключевым материалом, аутентификации.
 
-{\bf \thedefctr~сервер (server)}:
+{\bf \thedefctr~сервер} (server):
 Сторона, которая выполняет протокол TLS по запросу клиента.
 
 % RFC8446: The endpoint that did not initiate the TLS connection.
 
-{\bf \thedefctr~соединение (connection)}:
+{\bf \thedefctr~соединение} (connection):
 Cвязь между сторонами на транспортном коммуникационном уровне.
 
 % RFC8446: A transport-layer connection between two endpoints.
 
-{\bf \thedefctr~стенограмма протокола; стенограмма (transcript)}: 
+{\bf \thedefctr~стенограмма (протокола)} (transcript): 
 Последовательность сообщений протокола, переданных между сторонами к 
 определенному моменту.
 
@@ -122,10 +125,11 @@ Cвязь между сторонами на транспортном комму
 одного элемента.
 
 \begin{note*}
-Степенями при мультипликативной записи группы и кратными при аддитивной.
+Элементы являются степенями при мультипликативной записи группы и кратными при 
+аддитивной.
 \end{note*}
 
-{\bf \thedefctr~PSK-скрепка (PSK-binder)}:
+{\bf \thedefctr~PSK-скрепка} (PSK-binder):
 Данные, которые связывают предварительно согласованный секрет с текущим 
 соединением и возможно одним из предыдущих.
 
