--- a/spec13/04Defs.tex
+++ b/spec13/04Defs.tex
@@ -2,20 +2,20 @@
 
 В настоящем стандарте применяют следующие сокращения:
 
-АСН.1~--- абстрактно-синтаксическая нотация версии 1 (ГОСТ 34.973);
+АСН.1~--- абстрактно-синтаксическая нотация версии 1 (см. ГОСТ 34.973);
 
-УЦ~--- удостоверяющий центр (СТБ 34.101.19, СТБ 34.101.78);
+УЦ~--- удостоверяющий центр (см. СТБ 34.101.19, СТБ 34.101.78);
 
-ЭЦП~---~электронная цифровая подпись (СТБ 34.101.45);
+ЭЦП~---~электронная цифровая подпись (см. СТБ 34.101.45);
 
 DER (distinguished encoding rules)~--- отличительные правила кодирования АСН.1
-(СТБ 34.101.19 [приложение Б]);
+(см. СТБ 34.101.19 [приложение Б]);
 
 DHE (Diffie-Hellman ephemeral)~--- протокол Диффи~--- Хеллмана с одноразовыми 
 ключами;
 
 OCSP (online certificate status protocol)~--- онлайновый протокол проверки 
-статуса сертификата (СТБ 34.101.26);
+статуса сертификата (см. СТБ 34.101.26);
 
 RTT (round-trip time)~--- цикл приема-передачи данных в компьютерных сетях.
 
