--- a/spec13/051Purpose.tex
+++ b/spec13/051Purpose.tex
@@ -31,7 +31,7 @@ TLS встраивается в стек коммуникационных про
 
 Протокол TLS предыдущей версии 1.2 установлен в СТБ 34.101.65. 
 %
-Настоящий стандарт не отменяет СТБ~34.101.65~--- оба стандарта, как и 
+Настоящий стандарт не отменяет СТБ~34.101.65, оба стандарта, как и 
 соответствующие версии TLS, могут применяться одновременно независимо друг от 
 друга.
 
