--- a/spec13/053Phases.tex
+++ b/spec13/053Phases.tex
@@ -9,7 +9,7 @@
 используются для защиты всех последующих сообщений.
 
 \item
-Параметры сервера. Сервер устанавливает дополнительные параметры. Например 
+Параметры сервера. Сервер устанавливает дополнительные параметры. Например,
 запрашивает аутентификацию клиента или настраивает поддержку определенных 
 прикладных протоколов.
 
@@ -63,7 +63,7 @@
 
 Во-первых, в сообщениях \token[HS.CT]{Certificate} стороны пересылают друг другу
 свои сертификаты. Сервер не высылает сообщение \token[HS.CT]{Certificate}, если
-решено использовать секрет PSK, а клиент~--- если сервер не запрашивал аутентификацию 
+решено использовать PSK, а клиент~--- если сервер не запрашивал аутентификацию 
 на основе сертификата, т.~е. не высылал сообщение \token[HS.CR]{CertificateRequest}.
 
 Во-вторых, в сообщениях \token[HS.CV]{CertificateVerify} стороны пересылают свои
@@ -86,8 +86,8 @@
 согласованным секретом и, таким образом, подлинность стороны.
 
 Этапы Handshake представлены на рисунке~\ref{Fig.COMMON.Phases}. Здесь и на
-следующих рисунках знак ``$+$'' указывает на требующие внимания расширения,
-знак ``$*$''~--- на необязательные сообщения или расширения. Фигурными
+следующих рисунках знак <<$+$>> указывает на требующие внимания расширения,
+знак <<$*$>>~--- на необязательные сообщения или расширения. Фигурными
 скобками окаймляются сообщения, защищенные на общих ключах для Handshake,
 квадратными~--- на ключах для Record (см.~\ref{CRYPTO.Schedule}).
 
@@ -100,7 +100,7 @@
 
 Отправка сообщения~\token[HS.F]{Finished} означает, что сторона завершила
 Handshake и может переходить к отправке данных прикладных протоколов
-(``\code{Application Data}'' на рисунке). Для ускорения работы сервер может
+(<<\code{Application Data}>> на рисунке). Для ускорения работы сервер может
 отправлять прикладные данные, даже не получив встречного
 сообщения~\token[HS.F]{Finished} от клиента. При планировании использования TLS 
 в прикладных протоколах следует учитывать, что в момент отправки сервер
@@ -108,7 +108,7 @@ Handshake и может переходить к отправке данных п
 
 Еще одним способом ускорения TLS является отправка клиентом прикладных данных до
 завершения Handshake, т.~е. до отправки собственного 
-сообщения~\token[HS.F]{Finished}. Этот способ описан в п.~\ref{COMMON.ZeroRTT}. 
+сообщения~\token[HS.F]{Finished}. Этот способ описан в~\ref{COMMON.ZeroRTT}. 
 
 В TLS предусмотрена возможность отправки некоторых сообщений после Handshake. 
 С их помощью выпускаются билеты, выполняется отложенная аутентификация, 
