--- a/spec13/054Retry.tex
+++ b/spec13/054Retry.tex
@@ -9,7 +9,7 @@
 %
 Если клиент согласен с корректировками, то он высылает серверу повторное
 сообщение \token[HS.CH]{ClientHello} с подправленным расширением, перезапуская
-таким образом Handshake (см. рисунок~\ref{Fig.COMMON.Retry}).
+таким способом Handshake (см. рисунок~\ref{Fig.COMMON.Retry}).
 
 \begin{figure}[hbt]
 \begin{center}
