--- a/spec13/055Resume.tex
+++ b/spec13/055Resume.tex
@@ -40,7 +40,7 @@ Handshake.
 сервер не отправляет клиенту ни свой сертификат, ни сообщение 
 \token[HS.CV]{CertificateVerify}.
 %
-Тем не менее, в сообщении~\token[HS.CH]{ClientHello} второго сеанса клиент может
+Тем не менее в сообщении~\token[HS.CH]{ClientHello} второго сеанса клиент может
 выслать расширение~\token[HS.Ext.ks]{key_share}, допуская, что сервер откажется
 от возобновления связи и будет выполнять полный Handshake.
 
