--- a/spec13/061Msg.tex
+++ b/spec13/061Msg.tex
@@ -54,7 +54,7 @@ struct {
 Его формат определяется типом \code{msg_type}.
 
 Сообщения Handshake передаются с помощью протокола Record.
-В зависимости от типа сообщения, оно может передаваться в открытом виде или 
+В зависимости от типа сообщения оно может передаваться в открытом виде или 
 быть защищено.
 
 Сообщения Handshake должны отправляться в порядке, который указан 
