--- a/spec13/062KeyExch.tex
+++ b/spec13/062KeyExch.tex
@@ -7,7 +7,7 @@
 Согласование начинает клиент, высылая в своем сообщении 
 \token[HS.CH]{ClientHello} устраивающие его параметры.
 
-Имеется четыре перечня параметров:
+Имеются четыре перечня параметров:
 \begin{enumerate}
 \item
 Перечень поддерживаемых криптонаборов.
@@ -36,7 +36,7 @@
 \end{enumerate}
 
 Если сервер решает не использовать предварительно согласованные секреты, то он 
-может делать выбор в первых трех перечнях независимо друг от друга. А именно, 
+может делать выбор в первых трех перечнях независимо друг от друга. А именно
 сервер выбирает подходящие криптонабор, циклическую группу, алгоритмы ЭЦП. 
 Одновременно с выбором алгоритмов ЭЦП сервер выбирает сертификат для 
 аутентификации.
@@ -46,8 +46,8 @@
 \token[ALERT.Err.hf]{handshake_failure} или 
 \token[ALERT.Err.is]{insufficient_security}.
 
-Если сервер решает использовать предварительно согласованный секрет, то он 
-кроме всего прочего должен выбрать режим формирования общих ключей из 
+Если сервер решает использовать предварительно согласованный секрет, то он, 
+кроме всего прочего, должен выбрать режим формирования общих ключей из 
 списка, предложенного клиентом в \token[HS.Ext.pkem]{psk_key_exchange_modes}. 
 Если сервер выбирает режим PSK, то отсутствие подходящих групп в 
 \token[HS.Ext.sg]{supported_groups} не является критическим.
@@ -138,9 +138,9 @@ struct {
 
 \item
 \code{legacy_session_id}~--- устаревшее поле для идентификатора сеанса TLS. 
-В TLS 1.2 поле использовалось для возобновления связи.  
+В TLS версии 1.2 поле использовалось для возобновления связи.  
 %
-Если клиент получил идентификатор сеанса от сервера TLS 1.2 и желает 
+Если клиент получил идентификатор сеанса от сервера TLS версии 1.2 и желает 
 возобновить с сервером связь, то он должен указать идентификатор в поле 
 \code{legacy_session_id}. 
 %
@@ -234,7 +234,7 @@ struct {
 Обновление расширения \token[HS.Ext.psk]{pre_shared_key} 
 (см.~\ref{HS.Ext.psk}), если оно включено. В расширении пересчитываются поля 
 \code{obfuscated_ticket_age} и PSK-скрепки. Могут исключаться идентификаторы 
-PSK, алгоритмы хэширования которых не соответствует криптонабору, выбранному 
+PSK, алгоритмы хэширования которых не соответствуют криптонабору, выбранному 
 сервером.
 
 \item
@@ -300,7 +300,7 @@ struct {
 \code{random}~--- случайные данные сервера. Должны генерироваться независимо от 
 случайных данных клиента в \code{ClientHello.random}.
 %
-При выборе TLS версии 1.2 последние 8 байтов \code{random} должны быть 
+При выборе TLS версии 1.2 последние 8 байт \code{random} должны быть 
 заданы специальным образом, как это объясняется ниже;
 
 \item
@@ -371,12 +371,12 @@ $$
 % servers SHOULD, set the last 8 bytes of their ServerHello.Random value to the 
 % bytes: 44 4F 57 4E 47 52 44 00
 
-При согласовании TLS версии 1.2 клиент должен проверить, что последние 8 байтов 
+При согласовании TLS версии 1.2 клиент должен проверить, что последние 8 байт 
 \code{random} отличаются от указанных выше.
 %
-Если условие не выполнено, т.~е. сервер следует данному стандарту и, таким образом,
-поддерживает TLS 1.3, то клиент должен прервать Handshake с оповещением 
-\token[ALERT.Err.ip]{illegal_parameter}. 
+Если условие не выполнено, т.~е. сервер следует настоящему стандарту и, таким 
+образом, поддерживает TLS версии 1.3, то клиент должен прервать Handshake с 
+оповещением \token[ALERT.Err.ip]{illegal_parameter}. 
 
 % skip: This mechanism provides limited protection against downgrade attacks 
 % over and above what is provided by the Finished exchange: because the 
@@ -449,7 +449,7 @@ $$
 повторного \token[HS.CH]{ClientHello} (если сервер выбирает криптонабор в 
 первую очередь, то это будет происходить автоматически). 
 %
-Клиент должен проверить, что в \token[HS.SH]{ServerHello} указан то же
+Клиент должен проверить, что в \token[HS.SH]{ServerHello} указан тот же
 криптонабор, что в \token{HelloRetryRequest}. Клиент должен прервать Handshake с
 оповещением \token[ALERT.Err.ip]{illegal_parameter} при нарушении данного
 условия.
