--- a/spec13/067Post.tex
+++ b/spec13/067Post.tex
@@ -98,7 +98,7 @@ struct {
 % * Задается 32-битовым беззнаковым целым, в котором старшие байты идут  
 %   первыми (сетевой порядок байтов, big-endian).
 %
-Срок действия не должен быть больше 604800 секунд (7 суток). Нулевое значение
+Срок действия не должен быть больше 604~800 секунд (7 суток). Нулевое значение
 \code{ticket_lifetime} означает, что билет следует уничтожить немедленно.
 %
 % use: https://github.com/tlswg/tls13-spec/pull/1396#issuecomment-3285930579
@@ -126,7 +126,7 @@ struct {
 должны повторяться;
 
 \item
-\code{ticket}~--- билет. Выступает в роли идентификатор ассоциированного PSK. 
+\code{ticket}~--- билет. Выступает в роли идентификатора ассоциированного PSK. 
 Билетом может быть ключ базы данных или (аутентифицированный) шифртекст, 
 который проверяется при получении;
 
@@ -161,15 +161,14 @@ struct {
 Секрет, связанный с билетом, вычисляется по правилам, установленным 
 в~\ref{CRYPTO.Resume}.
 
-\begin{note}
-Если сервер не запрашивает аутентификацию клиента по сертификату, то он может 
-выслать билет в~\token{NewSessionTicket} сразу после своего сообщения 
+\begin{notes}
+1~Если сервер не запрашивает аутентификацию клиента по сертификату, то он 
+может выслать билет в~\token{NewSessionTicket} сразу после своего сообщения 
 \token[HS.F]{Finished}.
 %
 Для этого сервер самостоятельно вычисляет сообщение 
 \token[HS.F]{Finished} клиента, определяет полную стенограмму Handshake, 
 строит по ней сначала ключ \code{resumption_master_secret}, а затем билет.
-\end{note}
 
 % skip: This might be appropriate in cases where the client is expected to open 
 % multiple TLS connections in parallel and would benefit from the reduced 
@@ -177,15 +176,14 @@ struct {
 
 % todo: security?
 
-\begin{note}
-Сформировав один раз общие ключи, сервер может продлевать время их жизни, 
+2~Сформировав один раз общие ключи, сервер может продлевать время их жизни, 
 последовательно выпуская новые и новые билеты. Рекомендуется контролировать и 
 ограничивать время жизни такого ключевого материала. 
 %
 В частности, если первоначальные ключи построены с использованием сертификатов, 
 то при контроле следует учитывать срок действия сертификатов,  
 возможность их отзыва. 
-\end{note}
+\end{notes}
 
 \subsection{Отложенная аутентификация}\label{HS.Post.Auth} 
 
@@ -288,7 +286,7 @@ struct {
 
 Если в поле \code{request_update} сообщения \token{KeyUpdate} указано значение 
 \code{update_requested}, то получатель должен ответить своим собственным
-\token{KeyUpdate} прежде чем отправлять прикладные данные. 
+\token{KeyUpdate}, прежде чем отправлять прикладные данные. 
 %
 В поле \code{request_update} встречного \token{KeyUpdate} должно быть указано 
 значение \code{update_not_requested}.
@@ -299,22 +297,20 @@ struct {
 Сообщение \token{KeyUpdate} с запросом запрещено отправлять повторно до 
 получения искомого встречного \token{KeyUpdate}.
 
-\begin{note}
-После отправки \token{KeyUpdate} с запросом на встречное сообщение, сторона 
+\begin{notes}
+1~После отправки \token{KeyUpdate} с запросом на встречное сообщение, сторона 
 может получить это сообщение не сразу, а после других сообщений, которые 
 находятся в процессе доставки. При этом в процессе доставки могут находиться 
 запаздывающие сообщения \token{KeyUpdate}, не связанные с отправленным.
-\end{note}
 
 % skip: However, because send and receive keys are derived from independent 
 % traffic secrets, retaining the receive traffic secret does not threaten the  
 % forward secrecy of data sent before the sender changed keys.
 
-\begin{note}
-Если стороны независимо одновременно отправляют друг друг сообщения 
+2~Если стороны независимо одновременно отправляют друг друг сообщения 
 \token{KeyUpdate} с запросами на встречные сообщения, то, ответив на запросы, 
 каждая сторона в конце концов обновит ключ отправляемых ею данных дважды.
-\end{note}
+\end{notes}
 
 % skip: With a 128-bit key as in AES-128, rekeying 2^64 times has a high
 % probability of key reuse within a given connection.  Note that even
