--- a/spec13/073Enc.tex
+++ b/spec13/073Enc.tex
@@ -5,7 +5,7 @@
 преобразование.
 %
 Для защиты используются алгоритмы аутентифицированного шифрования с 
-ассоциированными данными (Authenticated Encryption with Associated Data, AEAD).
+ассоциированными данными (Authenticated Encryption with Associated Data (AEAD)).
 %
 Алгоритм установки защиты принимает на вход открытый текст, открытые 
 ассоциированные данные, ключ и синхропосылку и возвращает аутентифицированный 
@@ -19,7 +19,7 @@
 Аутентифицированный шифртекст обычно имеет б\'{о}льший объем, чем 
 соответствующий открытый текст. Должны использоваться такие алгоритмы 
 аутентифицированного шифрования, которые расширяют открытый текст не более чем 
-на~255 байтов.
+на~255 байт.
 
 При установке защиты структуры \code{TLSPlaintext} открытый текст оформляется  
 в виде структуры типа \code{TLSInnerPlaintext}. Этот тип определяется 
@@ -71,13 +71,13 @@ struct {
 
 \item
 \code{legacy_record_version}~--- устаревшее поле, в котором должен быть 
-задан номер \code{0x0303};
+задан номер \code{0x0303}.
 
 \begin{note*}
 В поле указывается версия записей TLS. Поскольку записи TLS версии 1.3 могут 
 пересылаться только после того, как данная версия согласована в Handshake, 
 проблемы с совместимостью не возникают. Поскольку версия TLS согласована в 
-Handshake, поле является избыточным.
+Handshake, поле является избыточным;
 \end{note*}
 
 \item
