--- a/spec13/074Nonce.tex
+++ b/spec13/074Nonce.tex
@@ -25,7 +25,7 @@
 \item 
 Полученная строка складывается поразрядно по модулю 2 с начальной 
 синхропосылкой \code{client_write_iv} или \code{server_write_iv} в зависимости 
-от того, кто является отправителем: клиент или сервер.
+от того, кто является отправителем~--- клиент или сервер.
 Начальная синхропосылка формируется по правилам, заданным в~\ref{CRYPTO.TKeys}.
 
 \item 
