--- a/spec13/075Pad.tex
+++ b/spec13/075Pad.tex
@@ -20,7 +20,7 @@
 Если ненулевой байт не найден, то соединение должно быть разорвано с 
 оповещением \token[ALERT.Err.um]{unexpected_message}.
 
-Размер структуры \code{TLSInnerPlaintext} не должен превышать $2^{14}+1$ байтов. 
+Размер структуры \code{TLSInnerPlaintext} не должен превышать $2^{14}+1$ байт. 
 Размер должен определяться с учетом дополнения.
 %
 Если максимальный размер \code{TLSInnerPlaintext} уменьшается, например, через 
