--- a/spec13/076Limits.tex
+++ b/spec13/076Limits.tex
@@ -3,7 +3,7 @@
 Алгоритмы аутентифицированного шифрования остаются надежными до тех пор, пока 
 соблюдаются квоты для используемых в них ключей. Квота ключа~--- это 
 максимальный объем данных, которые разрешается обработать без смены ключа.
-Пример квот представлен в СТБ 34.101.31 (Приложение В).
+Пример квот представлен в СТБ 34.101.31 (приложение В).
 
 Стороны TLS должны обновлять ключи при достижении квот.
 
