--- a/spec13/081Alerts.tex
+++ b/spec13/081Alerts.tex
@@ -29,7 +29,7 @@ struct {
 \item
 \code{level}~--- уровень оповещения: предупредительное или критическое;
 \item
-\code{description}~--- описание оповещение.
+\code{description}~--- описание оповещения.
 \end{itemize}
 
 Типы вложенных в \code{Alert} полей определяются следующим образом:
