--- a/spec13/082Closure.tex
+++ b/spec13/082Closure.tex
@@ -10,7 +10,7 @@
 \item\label{ALERT.Closure.cn}
 \token{close_notify}~--- отправитель информирует получателя о том, что больше не 
 будет посылать сообщения в данном соединении. Предполагается, что оповещение
-будет доставлено прежде чем соединение будет закрыто на транспортном уровне; 
+будет доставлено прежде, чем соединение будет закрыто на транспортном уровне; 
 
 % info: https://mailarchive.ietf.org/arch/msg/tls/yoenkuuNE70yGmeONa2VIOtVSKY/
 % * It is assumed that closing the write side of a connection reliably 
@@ -41,7 +41,7 @@
 
 Если соединение разорвано на транспортном уровне до 
 приема~\token[ALERT.Closure.cn]{close_notify}, то получатель не может быть 
-уверен, что он получил все предназначенные ему данные. Тем не менее, получатель 
+уверен, что он получил все предназначенные ему данные. Тем не менее получатель 
 не обязан дожидаться~\token[ALERT.Closure.cn]{close_notify} перед закрытием 
 соединения со своей стороны.
 
