--- a/spec13/083Err.tex
+++ b/spec13/083Err.tex
@@ -23,9 +23,9 @@ Handshake с оповещением~X>> означают, что если сто
 
 \item\label{ALERT.Err.ro}
 \token{record_overflow}~--- получена либо защищенная запись 
-\lstinline{TLSCiphertext}, размер которой больше $2^{14} + 256$ байтов,
+\lstinline{TLSCiphertext}, размер которой больше $2^{14} + 256$ байт,
 либо открытая запись \lstinline{TLSPlaintext}, размер которой больше $2^{14}$ 
-байтов. Максимальные размеры могут уменьшаться по предварительному согласованию 
+байт. Максимальные размеры могут уменьшаться по предварительному согласованию 
 сторон, например, с помощью расширения~\token[HS.Ext.mfl]{max_fragment_length}.
 %
 Оповещение никогда не появится при штатном выполнении TLS, если только запись
