--- a/spec13/091Hash.tex
+++ b/spec13/091Hash.tex
@@ -10,7 +10,7 @@
 \item
 длина $n$ кратна~$8$ и $n/8\leq 255$;
 \item
-сообщение~$X$ обрабатывается блоками по~$b$ битов;
+сообщение~$X$ обрабатывается блоками по~$b$ бит;
 \item
 длина~$b$ кратна~$8$ и $b\geq n$.
 \end{itemize}
