--- a/spec13/092Transcr.tex
+++ b/spec13/092Transcr.tex
@@ -27,7 +27,7 @@
 Заголовки записей Record, в которые сообщения Handshake инкапсулируются, не 
 учитываются. Сообщения интерпретируются как слова из~$\{0,1\}^{8*}$. 
 
-Стенограммы хэшируется с помощью алгоритма \code{Transcript-Hash}. 
+Стенограммы хэшируются с помощью алгоритма \code{Transcript-Hash}. 
 Алгоритм получает на вход стенограмму $M=(M_1,M_2,\ldots,M_m)$
 и возвращает хэш-значение $Y\in\{0,1\}^n$.
 
