--- a/spec13/093HKDF.tex
+++ b/spec13/093HKDF.tex
@@ -22,8 +22,8 @@ C помощью \code{HKDF-Extract} по энтропийному слову $X
 
 Для учета специфики TLS алгоритм \code{HKDF-Expand} расширяется сначала до алгоритма
 \code{HKDF-Expand-Label}, а затем до \code{Derive-Secret}. При расширении
-усложняется интерфейс \code{HKDF-Expand}~--- вместо единой синхропосылки на вход
-подаются ее части. 
+усложняется интерфейс \code{HKDF-Expand}: вместо единой синхропосылки на вход 
+подаются ее части.
 %
 В первой части указывается метка (название) ключа, который строится, во второй~--- 
 контекст, в котором построение выполняется. В \code{Derive-Secret} в качестве 
@@ -62,8 +62,8 @@ C помощью \code{HKDF-Extract} по энтропийному слову $X
 \end{itemize}
 
 Метки ключей кодируются строками ASCII с окаймлением двойными кавычками 
-(см.~\ref{DEFS}). В алгоритме \code{HKDF-Expand-Label} к меткам добавляется 
-префикс \str{tls13 }.
+(см. раздел~\ref{DEFS}). В алгоритме \code{HKDF-Expand-Label} к меткам 
+добавляется префикс \str{tls13 }.
 
 \subsection{Алгоритм \code{HKDF-Extract}}\label{CRYPTO.HKDF.Extract}
 
