--- a/spec13/099Other.tex
+++ b/spec13/099Other.tex
@@ -11,7 +11,7 @@
 представителей.
 
 Алгоритм построения экспортера принимает на вход ключ~$K$, метку 
-$L\in\{0,1\}^{8*}$, контекст~$C\in\{0,1\}^{8*}$ и натуральное~$m$~---
+$L\in\{0,1\}^{8*}$, контекст~$C\in\{0,1\}^{8*}$ и натуральное число~$m$~---
 длину экспортера в байтах. Алгоритм возвращает экспортер~$Y\in\{0,1\}^{8m}$. 
 %
 В качестве~$K$ должен использоваться один из
