--- a/spec13/91Syntax.tex
+++ b/spec13/91Syntax.tex
@@ -73,7 +73,7 @@ T T2[n];
 
 В следующем примере тип \code{Datum} описывает тройку неструктурированных
 байтов, а тип \code{Data}~--- тройку элементов типа \code{Datum}, которые в 
-сумме занимают девять байтов:
+сумме занимают 9 байт:
 %
 \begin{codeblock}
 opaque Datum[3];
@@ -97,15 +97,15 @@ T T3<floor..ceiling>;
 кодируется пустой последовательностью. 
 
 В следующем примере вектор типа~\code{mandatory} содержит от~300 
-до~400 байтов, а вектор типа~\code{longer}~--- до~800 байтов или до~400 
-элементов типа~\code{uint16}:
+до 400~байт, а вектор типа~\code{longer}~--- до 800~байт или до 400~элементов 
+типа~\code{uint16}: 
 %
 \begin{codeblock}
 opaque mandatory<300..400>;
 uint16 longer<0..800>;
 \end{codeblock}
 %
-Вектор~\code{mandatory} не может быть пустым. Код его длины занимает два байта, 
+Вектор~\code{mandatory} не может быть пустым. Код его длины занимает 2~байта, 
 которых достаточно для представления числа~400 (см.~\ref{SYNTAX.Numbers}).
 %
 Вектор~\code{longer} может иметь нулевую длину, и тогда его кодовое
@@ -146,7 +146,7 @@ Te += {ee(vv), eee(vvv)};
 
 Код переменной перечислительного типа занимает столько байтов, сколько 
 необходимо для записи максимального допустимого значения. Элементы следующего 
-перечисления занимают один байт:
+перечисления занимают 1~байт:
 %
 \begin{codeblock}
 enum { red(3), blue(5), white(7) } Color;
@@ -156,7 +156,7 @@ enum { red(3), blue(5), white(7) } Color;
 введения соответствующего элемента, т.~е. без имени. В примере с типом~\code{Te} 
 таким значением является \code{m}. 
 
-В следующем примере коды переменных типа \code{Taste} будут занимать два байта, 
+В следующем примере коды переменных типа \code{Taste} будут занимать 2~байта, 
 хотя могут принимать только значения~1, 2 или~4: 
 %
 \begin{codeblock}
@@ -173,7 +173,7 @@ Color color = blue;           /</* определяется неявно */>/
 \end{codeblock}
 
 Имена, назначаемые элементам перечислительного типа, не обязательно должны 
-быть уникальны~--- имя может быть назначено целому диапазону значений.
+быть уникальны, имя может быть назначено целому диапазону значений.
 Диапазон задается минимальной и максимальной границами, разделенными двумя 
 точками:
 %
@@ -197,7 +197,7 @@ struct {
 
 В структуры могут быть вложены другие структуры, векторы фиксированной и 
 переменной длин. Структуры~\code{V1} и~\code{V2} в примерах 
-пункта~\ref{SYNTAX.Variants} это демонстрируют.
+раздела~\ref{SYNTAX.Variants} это демонстрируют.
 
 При ссылке на поле структуры указываются тип и имя поля. Например, 
 \lstinline{T.f2}~--- ссылка на второе поле структуры, определенной выше.
