--- a/spec13/92EMS.tex
+++ b/spec13/92EMS.tex
@@ -29,7 +29,7 @@
 Handshake, начиная с \code{ClientHello} и заканчивая \code{ClientKeyExchange}.
 \item
 Определить алгоритм хэширования \code{Hash}, используемый в алгоритме генерации 
-псевдослучайных чисел (см. СТБ 34.101.65 [п.~8.16]), и вычислить с его помощью 
+псевдослучайных чисел (см. СТБ 34.101.65 [пункт~8.16]), и вычислить с его помощью 
 хэш-значение \code{session_hash = Hash(handshake_messages)}
 стенограммы \code{handshake_messages}.
 \item
@@ -42,7 +42,7 @@ master_secret = PRF(pre_master_secret,
 
 Если применение расширения \code{extended_master_secret} не было согласовано,
 то клиент и сервер должны использовать алгоритм вычисления мастер-ключа, 
-определенный в СТБ 34.101.65 (п. 8.16).
+определенный в СТБ 34.101.65 (пункт~8.16).
 
 \hiddensection{Установка связи}\label{EMS.FullHS}
 
