--- a/spec13/99Biblio.tex
+++ b/spec13/99Biblio.tex
@@ -2,35 +2,48 @@
 \begin{thebibliography}{999}
 \bibitem{ISO9899}
 ISO/IEC 9899:2011 
-Information technology~--– Programming languages + C\\
-{\small Информационные технологии. Языки программирования. Си}
+Information technology~--– Programming languages~--- C\\
+{\small (Информационные технологии~--- Языки программирования~--- Си)}
 
 \bibitem{RFC4506}
 M. Eisler, Ed. 
 XDR: External Data Representation Standard. 
-Request for Comments: 4506, 2006
+Request for Comments: 4506, 2006\\
+{\small (XDR: стандарт представления внешних данных)}
 
 \bibitem{RFC8446}
 Rescorla E.
 The Transport Layer Security (TLS) Protocol Version 1.3.
-Request for Comments: 8446, 2018
+Request for Comments: 8446, 2018\\
+{\small (Протокол защиты транспортного уровня. Версия 1.3)}
 
 \bibitem{Kra10}
 Krawczyk~H. 
 Cryptographic Extraction and Key Derivation: The HKDF Scheme. 
 In: Rabin, T. (eds) Advances in Cryptology~--- CRYPTO 2010. 
 Lecture Notes in Computer Science, 6223: 237--254. 
-Springer, Berlin, Heidelberg, 2010
+Springer, Berlin, Heidelberg, 2010\\
+{\small (Извлечение и построение криптографических ключей: схема HKDF)}
 
 \bibitem{RFC5869}
 Krawczyk~H., Eronen~P.
 HMAC-based Extract-and-Expand Key Derivation Function (HKDF).
-Request for Comments: 5869, 2010
+Request for Comments: 5869, 2010\\
+{\small (Функция построения ключей по схеме <<извлечь-и-развернуть>> на основе  
+HMAC (HKDF))} 
+
+\bibitem{RFC7250}
+Wouters P., Tschofenig H., Gilmore J., Weiler S., Kivinen T.  
+Using Raw Public Keys in Transport Layer Security (TLS)
+and Datagram Transport Layer Security (DTLS).
+Request for Comments: 7250, 2014\\
+{\small (Использование самостоятельных открытых ключей в TLS и DTLS)} 
 
 \bibitem{RFC6066}
 Eastlake 3rd D.
 Transport Layer Security (TLS) Extensions: Extension Definitions.
-Request for Comments: 6066, 2011
+Request for Comments: 6066, 2011\\
+{\small (Расширения TLS: определения расширений)}
 
 %\bibitem{RFC7919}
 %Gillmor D.
@@ -47,59 +60,65 @@ Request for Comments: 6066, 2011
 McGrew~D., Rescorla E.
 Datagram Transport Layer Security (DTLS) Extension to Establish Keys
 for the Secure Real-time Transport Protocol (SRTP).
-Request for Comments: 5746, 2010
+Request for Comments: 5746, 2010\\
+{\small (Расширение DTLS для формирования ключей протокола SRTP)}
 
 \bibitem{RFC6520}
 Seggelmann R., Tuexen M., Williams M.
 Transport Layer Security (TLS) and Datagram Transport Layer Security (DTLS) 
 Heartbeat Extension.
-Request for Comments: 6520, 2012
+Request for Comments: 6520, 2012\\
+{\small (Расширение Heartbeat протоколов TLS и DTLS)}
 
 \bibitem{RFC7301}
 Frield S., Popov A., Langley A., Stephan E.
 Transport Layer Security (TLS) Application-Layer Protocol Negotiation 
 Extension.
-Request for Comments: 7301, 2014
+Request for Comments: 7301, 2014\\
+{\small (Расширение TLS для согласования прикладного протокола)}
 
 \bibitem{RFC6962}
 Laurie B., Langley A., Casper E.
 Certificate Transparency.
 Request for Comments: 6962, 2013
-
-\bibitem{RFC7250}
-Wouters P., Tschofenig H., Gilmore J., Weiler S., Kivinen T.  
-Using Raw Public Keys in Transport Layer Security (TLS)
-and Datagram Transport Layer Security (DTLS).
-Request for Comments: 7250, 2014
+{\small (Обеспечение прозрачности сертификатов)}
 
 \bibitem{RFC7685}
 Langley A.
 A Transport Layer Security (TLS) ClientHello Padding Extension.
 Request for Comments: 7685, 2015
+{\small (Расширение TLS для увеличения размера ClientHello)}
 
 \bibitem{RFC7507}
 Moeller B., Langley A.
 TLS Fallback Signaling Cipher Suite Value (SCSV) for Preventing Protocol 
 Downgrade Attacks.
-Request for Comments: 7507, 2015
+Request for Comments: 7507, 2015\\
+{\small (Криптонабор SCSV протокола TLS для защиты от атак по понижению версии)}
 
 \bibitem{RFC5705}
 Rescorla E.
 Keying Material Exporters for Transport Layer Security (TLS).
-Request for Comments: 5705, 2010
+Request for Comments: 5705, 2010\\
+{\small (Экспортеры ключевого материала для TLS)}
 
 \bibitem{RFC7627}
 Bhargavan K., Delignat-Lavaud A., Pironti A., Langley A., Ray M.
 Transport Layer Security (TLS) Session Hash and Extended Master Secret 
 Extension.
-Request for Comments: 7627, 2015
+Request for Comments: 7627, 2015\\
+{\small (Хэширование стенограмм TLS и расширение для изменения алгоритма
+вычисления мастер-ключа)} 
 
 \bibitem{Triple}
 Bhargavan K., Delignat-Lavaud A., Fournet C., Pironti A., Strub P.-Y. 
 Triple Handshakes and Cookie Cutters: Breaking and Fixing Authentication 
 over~TLS. 
 2014 IEEE Symposium on Security and Privacy, Berkeley, CA, USA, 2014, 
-pp.~98--113
+pp.~98--113\\
+{\small (Тройное рукопожатие и обрезка куки: взлом и исправление аутентификации 
+на основе TLS)}
+
 \label{LastBib}
 \end{thebibliography}
 
