--- a/spec13/00Title.tex
+++ b/spec13/00Title.tex
@@ -67,9 +67,9 @@
 2~УТВЕРЖДЕН И ВВЕДЕН В ДЕЙСТВИЕ постановлением Госстандарта Республики 
 Беларусь от $\phantom{\text{22 мая 2014 г.}}$~\No~$\phantom{23}$
 
-3~Настоящий стандарт разработан на основе документа RFC 8446:2018 The 
-Transport Layer Security (TLS) Protocol. Version 1.3 (Протокол защиты 
-транспортного уровня. Версия 1.3). Документ RFC 8446 разработан 
+3~Настоящий стандарт разработан на основе документа RFC 8446:2018 <<The 
+Transport Layer Security (TLS) Protocol. Version 1.3>> (<<Протокол защиты 
+транспортного уровня. Версия 1.3>>). Документ RFC 8446 разработан 
 Специальной комиссией интернет-разработок (Internet Engineering Task 
 Force)
 
