--- a/spec13/02Refs.tex
+++ b/spec13/02Refs.tex
@@ -1,6 +1,6 @@
 \chapter{Нормативные ссылки}\label{REFS}
 
-СТБ~34.101.19-2012 Информационная технологии и безопасность. Форматы 
+СТБ~34.101.19-2012 Информационные технологии и безопасность. Форматы 
 сертификатов и списков отозванных сертификатов инфраструктуры открытых 
 ключей
 
@@ -14,8 +14,8 @@
 электронной цифровой подписи и транспорта ключа на основе эллиптических 
 кривых
 
-СТБ~34.101.47-2017 Информационные технологии и безопасность. Алгоритмы 
-генерации псевдослучайных чисел
+СТБ~34.101.47-2017 Информационные технологии и безопасность. Криптографические 
+алгоритмы генерации псевдослучайных чисел
 
 СТБ 34.101.65-2014 Информационные технологии и безопасность. 
 Протокол защиты транспортного уровня (TLS)
@@ -29,12 +29,12 @@
 СТБ 34.101.78-2019 Информационные технологии и безопасность. 
 Профиль инфраструктуры открытых ключей
 
-ГОСТ~27463-87 Системы обработки информации. 7-битные кодированные наборы 
-символов
-
 ГОСТ 34.973-91 (ИСО 8824-87) Информационная технология. Взаимосвязь 
 открытых систем. Спецификация абстрактно-синтаксической нотации версии 1 
-(АСН.1) 
+(АСН.1)
+
+ГОСТ~27463-87 Системы обработки информации. 7-битные кодированные наборы 
+символов
 
 \begin{note*}
 При пользовании настоящим стандартом целесообразно проверить действие
