--- a/spec13/072Frag.tex
+++ b/spec13/072Frag.tex
@@ -30,7 +30,7 @@
 даже если он сопровождается дополнением.
 \end{itemize}
 
-Сообщения протокола Alert не должны передаваться в нескольких записях и,
+Сообщения протокола Alert не должны передаваться в нескольких записях, и,
 наоборот, в одной записи не должно передаваться несколько сообщений Alert.
 Другими словами, запись Alert должна содержать ровно одно сообщение.
 
@@ -73,14 +73,14 @@ struct {
 Если в записи передается первое сообщение \token[HS.CH]{ClientHello} протокола 
 Handshake, то в поле может указываться номер \code{0x0301}.
 %
-Во всех остальных случаях в поле должен быть установлен номер \code{0x0303};
+Во всех остальных случаях в поле должен быть установлен номер \code{0x0303}.
 
 \begin{note*}
 Номер \code{0x0301} соответствует TLS 1.0, номер \code{0x0303}~--- TLS 1.2.
 Установка номера \code{0x0301} в записи для первого \token[HS.CH]{ClientHello}  
 и номера \code{0x0303} в записи для повторного \token[HS.CH]{ClientHello} или 
 \token[HS.SH]{ServerHello} обеспечивает максимальную совместимость 
-с предыдущими версиями TLS.
+с предыдущими версиями TLS;
 %
 % skip: This document describes TLS 1.3, which uses the version 0x0304. 
 \end{note*}
